--- a/.github/workflows/BuildAndTestOnPullRequests.yml
+++ b/.github/workflows/BuildAndTestOnPullRequests.yml
@@ -2,9 +2,9 @@ name: CI for Pull Requests
 
 on:
   push:
-    branches: [ dev, master ]
+    branches: [ dev ]
   pull_request:
-    branches: [ dev, master ]
+    branches: [ dev ]
 
 jobs:
   Build_Stateless_solution:
@@ -21,16 +21,12 @@ jobs:
     - name: Test Stateless
       run: dotnet test --no-restore --no-build --configuration Release
       
-    - name: Pack alpha version
-      if: github.ref == 'refs/heads/dev' && github.event_name == 'push' && github.repository == 'dotnet-state-machine/stateless'
-      run: dotnet pack src\Stateless\Stateless.csproj --version-suffix dev-${{github.run_id}} --configuration Release
-    - name: Publish alpha version
-      if: github.ref == 'refs/heads/dev' && github.event_name == 'push' && github.repository == 'dotnet-state-machine/stateless'
-      run: dotnet nuget push src\Stateless\bin\Release\*.nupkg -s nuget.org --api-key ${{ secrets.NUGETAPIKEY }}
+    - name: Authenticate to GitHub Packages
+      run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/teal-inc/index.json"
   
     - name: Pack Release version
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push' && github.repository == 'dotnet-state-machine/stateless'
-      run: dotnet pack src\Stateless\Stateless.csproj --configuration Release
+      if: github.event_name == 'push'
+      run: dotnet pack src\Stateless\Stateless.csproj --version-suffix tealinc --configuration Release
     - name: Publish Release version
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push' && github.repository == 'dotnet-state-machine/stateless'
-      run: dotnet nuget push src\Stateless\bin\Release\*.nupkg -s nuget.org --api-key ${{ secrets.NUGETAPIKEY }}
+      if: github.event_name == 'push'
+      run: dotnet nuget push src\Stateless\bin\Release\*.nupkg --source "github"
